src/main.css
/*
  elm-hot creates an additional div wrapper around the app to make HMR possible.
  This could break styling in development mode if you are using Elm UI.

  More context in the issue:
    https://github.com/halfzebra/create-elm-app/issues/320
*/
[data-elm-hot="true"] {
  height: inherit;
}

body {
  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  text-align: center;
  color: #293c4b;
}

h1 {
  font-size: 30px;
}

img {
  margin: 20px 0;
  max-width: 200px;
}

.clip-circle {
  clip-path: circle(20px at center);
}

.dropdown {
  appearance: none;
  background: none;
  border: 1px solid black;
  border-radius: 5px 5px 5px 5px;
  padding: 10px;
  font-family: 'Work Sans';
  font-size: 16px;
  font-weight: lighter;
  width: 100%;
  background-image: url('/angle-down-solid.svg'), linear-gradient(#ffffff, #ffffff);
  background-size: 16px;
  background-repeat: no-repeat;
  background-position: right 10px center;
}

.dropdown:disabled {
  border-color: rgb(191, 191, 191);
}

.dropdown optgroup {
  font-weight: lighter;
}

.dropdown option {
  font-weight: 300;
}

.number-dropdown {
  appearance: none;
  background: none;
  border: 0px solid black;
  border-radius: 5px 5px 5px 5px;
  font-family: 'Work Sans';
  font-size: 16px;
  font-weight: lighter;
  width: 100%;
  background-image: url('/angle-down-solid.svg'), linear-gradient(#ffffff, #ffffff);
  background-size: 14px;
  background-repeat: no-repeat;
  background-position: right 0px center;
}

.number-dropdown:disabled {
  border-color: rgb(191, 191, 191);
}

.number-dropdown option {
  font-weight: 300;
}

.truncate {
  min-width: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

